--- a/Pic.htm
+++ b/Pic.htm
@@ -18,12 +18,10 @@
   <tr>
     <td width="54%" height="169">
 	<p align="center">
-	<img border="0" src="Pic.files/Zhao.bmp" width="160" height="203"></p>
+	<img border="0" src="Guoying1.jpg" width="274" height="285"></p>
 	<p align="center"><span lang="en-us"><b><font face="Times New Roman">Prof.</font></b></span><font face="Times New Roman"><b><span lang="EN-US"> Guoying Zhao</span></b></font></p>
 	<p align="center"><font face="Times New Roman">&nbsp;&nbsp; 
-    <img border="0" src="images/name.bmp" width="85" height="30"></font></p>
-	<p align="center"><font face="Times New Roman">
-			Center for Machine 
+    		Center for Machine 
     Vision <span lang="en-us">and Signal Analysis</span>, University of Oulu<span lang="en-us">, 
 	Finland</span>.</font></p>
 
@@ -32,8 +30,7 @@
 </table>
 
 <p>
-    <a target="_blank" href="images/IMG_0339.JPG">
-    <img border="0" src="images/IMG_0339.JPG" width="300" height="225"></a></p>
+    <img border="0" src="Guoying2.jpg" width="720" height="480"></p>
 <p>
     &nbsp;&nbsp;&nbsp;&nbsp; <font face="Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 	Oulu, Finland</font></p>
