--- a/Title.htm
+++ b/Title.htm
@@ -13,57 +13,50 @@
 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="1667" id="AutoNumber2" height="34">
   <tr>
     
-    <td width="150" height="34" align="center">
-	<a target="_top" href="CN/index_cn.htm">
-	<img border="0" src="images/chinese.jpg" width="70" height="44"></a></td>
+    <td width="150" height="34" align="center" bgcolor="#FFFFFF">
+	　</td>
     
-    <td width="128" height="34" align="center">
+    <td width="128" height="34" align="center" bgcolor="#FFFFFF">
     <p class="MsoNormal" style="text-autospace: none">
     <font face="Times New Roman"><b>
-    <span lang="EN-US" style="font-family: TimesNewRomanPS-BoldMT">
+    <span lang="EN-US" style="font-family: TimesNewRomanPS-BoldMT; background-color:#C0C0C0">
     <a href="personal.htm">PERSONAL</a></span></b></font></td>
     <td width="11" height="34" align="center">
-	<img border="0" src="images/star.bmp" width="20" height="18"></td>
+	　</td>
     <td width="134" height="34" align="center"><b>
-    <span lang="EN-US" style="font-family: Times New Roman">
+    <span lang="EN-US" style="font-family: Times New Roman; background-color:#C0C0C0">
     <a href="education.htm">EDUCATION</a></span></b></td>
     <td width="11" height="34" align="center">
-	<img border="0" src="images/star.bmp" width="20" height="18"></td>
+	　</td>
     <td width="140" height="34" align="center"><b>
     <a href="main_experience.htm">
-    <span style="font-family: Times New Roman">
+    <span style="font-family: Times New Roman; background-color:#C0C0C0">
     MAIN EXPERIENCE</span></a></b></td>
     <td width="20" height="34" align="center">
-    <img border="0" src="images/star.bmp" width="20" height="18"></td>
+    　</td>
     <td width="172" height="34" align="center"><b>
-    <span style="font-family: Times New Roman">
+    <span style="font-family: Times New Roman; background-color:#C0C0C0">
     <a href="professional_activities.htm">PROFESSIONAL&nbsp; ACTIVITIS</a></span></b></td>
     <td width="11" height="34" align="center">
 	<p class="MsoNormal">
-	<img border="0" src="images/star.bmp" width="20" height="18"></td>
-    <td width="145" height="34" align="center"><b><font face="Times New Roman">
-	<a href="teammembers.htm">TEAM MEMBERS</a></font></b></td>
-    <td width="56" height="34" align="center">
-	<img border="0" src="images/star.bmp" width="20" height="18"></td>
-    <td width="147" height="34" align="center"><font face="Times New Roman">
-    <b><span lang="EN-US"><a href="publications.htm">PUBLICATIONS</a></span></b></font></td>
-    <td width="11" height="34" bgcolor="#FFFFFF" align="center">
-	<img border="0" src="images/star.bmp" width="20" height="18"></td>
-    <td width="147" height="34" align="center"><b>
-	<span style="font-family: Times New Roman">
-	<a target="_blank" href="Research.htm">RESEARCH</a></span></b></td>
-    <td width="8" height="34" align="center">
-	<img border="0" src="images/star.bmp" width="20" height="18"></td>
-    <td width="163" height="34" align="center">
-    <p class="MsoNormal"><b><font face="Times New Roman">
-    <a href="honors_awards.htm">TEACHING &amp; AWARDS</a></font></b></td>
-    <td width="39" height="34" bgcolor="#FFFFFF" align="center">
-	<img border="0" src="images/star.bmp" width="20" height="18"></td>
-    <td width="113" height="34" align="center"><b>
-    <font face="Times New Roman"><a href="Pictures.htm">PICTURES</a></font></b></td>
-    <td width="48" height="34" bgcolor="#FFFFFF" align="center">
 	　</td>
-    <td width="110" height="34" align="center">　</td>
+    <td width="145" height="34" align="center"><b><font face="Times New Roman">
+	<a href="teammembers.htm"><span style="background-color: #C0C0C0">TEAM MEMBERS</span></a></font></b></td>
+    <td width="10" height="34" align="center">
+	　</td>
+    <td width="201" height="34" align="center"><font face="Times New Roman">
+    <b><span lang="EN-US"><a href="publications.htm">
+	<span style="background-color: #C0C0C0">PUBLICATIONS</span></a></span></b></font></td>
+    <td width="9" height="34" bgcolor="#FFFFFF" align="center">
+	　</td>
+    <td width="186" height="34" align="center"><b>
+	<span style="font-family: Times New Roman; background-color:#C0C0C0">
+	<a target="_blank" href="Research.htm">RESEARCH</a></span></b></td>
+    <td width="9" height="34" align="center">
+	　</td>
+    <td width="238" height="34" align="center">
+    <p class="MsoNormal"><b><font face="Times New Roman">
+    <a href="honors_awards.htm"><span style="background-color: #C0C0C0">TEACHING &amp; AWARDS</span></a></font></b></td>
   </tr>
 </table>
 
