--- a/Title.htm
+++ b/Title.htm
@@ -49,14 +49,12 @@
 	<span style="background-color: #C0C0C0">PUBLICATIONS</span></a></span></b></font></td>
     <td width="9" height="34" bgcolor="#FFFFFF" align="center">
 	¡¡</td>
-    <td width="186" height="34" align="center"><b>
-	<span style="font-family: Times New Roman; background-color:#C0C0C0">
-	<a target="_blank" href="Research.htm">RESEARCH</a></span></b></td>
+    <td width="186" height="34" align="center"><b><font face="Times New Roman">
+    <a href="honors_awards.htm"><span style="background-color: #C0C0C0">TEACHING &amp; AWARDS</span></a></font></b></td>
     <td width="9" height="34" align="center">
 	¡¡</td>
     <td width="238" height="34" align="center">
-    <p class="MsoNormal"><b><font face="Times New Roman">
-    <a href="honors_awards.htm"><span style="background-color: #C0C0C0">TEACHING &amp; AWARDS</span></a></font></b></td>
+    <p class="MsoNormal">¡¡</td>
   </tr>
 </table>
 
