--- a/personal.htm
+++ b/personal.htm
@@ -139,33 +139,26 @@ been reported by Finnish TV programs, newspapers and MIT Technology Review.</spa
 text-indent:-.38in;text-align:left;direction:ltr;unicode-bidi:embed;vertical-align:
 baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<font face="Times New Roman">
-	<img border="0" src="images/new.bmp" width="29" height="13">
-		Open positions: Postdoctoral researchers, PhD students, Master thesis 
+		<u><b>Open positions</b></u>: Postdoctoral researchers, PhD students, Master thesis 
 		workers.</font><p>
 		<font face="Times New Roman">
-	<img border="0" src="images/new.bmp" width="29" height="13">
 		2020.10: Mr. Muzammil Behzad won the three minutes PhD thesis 
 		competition organized by ICIP2020:</font><span lang="EN-US" style="font-family: Times New Roman; color: #1F497D">
 		<a style="color: blue; text-decoration: underline; text-underline: single" href="https://2020.ieeeicip.org/3-minute-thesis-competition/">
 		https://2020.ieeeicip.org/3-minute-thesis-competition/</a>.</span><p>
 		<font face="Times New Roman">
-	<img border="0" src="images/new.bmp" width="29" height="13">
 		2020.08: We have got the 2nd Place on Action Recognition Track of ECCV 
 		2020 VIPriors Challenges (with accuracy of 88.31%). More details can be 
 		found
 		<a target="_blank" href="https://competitions.codalab.org/competitions/23706#results">
 		here</a><span lang="en-us">.</span></font><p>
 		<font face="Times New Roman">
-	<img border="0" src="images/new.bmp" width="29" height="13">
 		2020.08: Dr. Xiaobai Li has been selected to Assistant Professor (Tenure 
 		Track) position in CMVS, University of Oulu.</font><p>
 		<font face="Times New Roman">
-	<img border="0" src="images/new.bmp" width="29" height="13">
 		2020.07: Dr. Jingang Shi has been appointed Associate Professor position 
 		in Xi'an Jiaotong University, China.</font></div>
-		¡¡<p><font face="Times New Roman">
-	<img border="0" src="images/new.bmp" width="29" height="13">
-		</font><span lang="EN-US" style="font-family: Times New Roman">2020.06: 
+		<p><span lang="EN-US" style="font-family: Times New Roman">2020.06: 
 	We have won the <b>first place</b> in the <b>ChaLearn multi-modal face 
 	anti-spoofing attack detection challenge</b> @ CVPR 2020, and the <b>second 
 	place </b>in the <b>ChaLearn single-modal face anti-spoofing attack 
@@ -174,7 +167,6 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 	https://sites.google.com/qq.com/face-anti-spoofing/winners-results/challengecvpr2020</a>.</span></p>
 	<p>
 		<font face="Times New Roman">
-	<img border="0" src="images/new.bmp" width="29" height="13">
 		2020.06: Joint work with Learning &amp; Educational Technology Research Unit 
 	(LET) accepted to top tier IEEE Transactions on Affective Computing: &quot;Muhterem 
 	Dindar, Sanna J&auml;rvel&auml;, Sara Ahola, Xiaohua Huang, Guoying Zhao. <b>Leaders 
@@ -182,18 +174,15 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 	A facial expression recognition study on emotional valence</b>.&quot;</font></p>
 	<p>
 		<font face="Times New Roman">
-	<img border="0" src="images/new.bmp" width="29" height="13">
 		2020.06: Ms. Yingyue Xu has successfully defended her doctoral 
 	dissertation and obtained PhD degree.</font></p>
 	<p>
 		<font face="Times New Roman">
-	<img border="0" src="images/new.bmp" width="29" height="13">
 		2020.05: Dr. Xin Liu has been selected to highly competitive Academy of 
 	Finland postdoctoral position 2020.09-2023.08.</font></p>
-	<p>¡¡</p>
-	<p><font face="Times New Roman">
+	<p><b><u><font face="Times New Roman">
 	<span lang="en-us">Downloading: 
-	codes and databases:</span></font></p>
+	codes and databases:</span></font></u></b></p>
 	<p>
 	<span lang="en-us" style="font-family: Times New Roman; font-weight: 700">Codes:	</span>	</p>
 	<ul>
@@ -206,11 +195,12 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 	    </li>
 		<li class="style1">
 	    <p style="line-height: 150%; margin-bottom: 0">
-		<font face="Times New Roman">Implementation of ¡°Hierarchical Contour Closure based Holistic Salient Object  Detection¡± : <a href="https://sites.google.com/view/hcchsal" target="_blank">https://sites.google.com/view/hcchsal.</a></font></p>
+		<font face="Times New Roman">Implementation of <i>Hierarchical Contour Closure based Holistic Salient Object  Detection
+		</i>: <a href="https://sites.google.com/view/hcchsal" target="_blank">https://sites.google.com/view/hcchsal.</a></font></p>
 	    </li>
 	  <li class="style1">
 		<p style="line-height: 150%; margin-bottom: 0">
-		<font face="Times New Roman">Implementation of ¡°Side-output Residual Network for Object Symmetry Detection in  the Wild¡±: <a href="https://github.com/KevinKecc/SRN" target="_blank">https://github.com/KevinKecc/SRN</a>.</font></li>
+		<font face="Times New Roman">Implementation of <i>Side-output Residual Network for Object Symmetry Detection in  the Wild</i>: <a href="https://github.com/KevinKecc/SRN" target="_blank">https://github.com/KevinKecc/SRN</a>.</font></li>
 	</ul>
 	<ul>
       <li>
@@ -374,18 +364,10 @@ Hong<span lang="en-us"> X</span>, Zhao<span lang="en-us"> G</span>, and Pietik&a
 			which considered both spontaneous and posed facial expressions. This 
 			database offers data collected on the same participants and under 
 			the same recording condition, which can be used for comparing or 
-			distinguishing spontaneous and posed facial expressions. </span>
-			<span id="line-8" class="anchor"></span>
-			<span id="line-9" class="anchor"></span></div>
-	</div>
-	<p>
-	¡¡</p></td>
+			distinguishing spontaneous and posed facial expressions</span></div>
+	</div></td>
   </tr>
-  <tr>
-    <td width="100%">
-    ¡¡</td>
-  </tr>
-</table>
+  </table>
 
 
 </body>
