--- a/publications.htm
+++ b/publications.htm
@@ -86,8 +86,7 @@ Bachelor of Technology, Shijiazhuang Railway Institute, June, 1999 (In Chinese)<
 <font size="4">Mihalis A. Nicolaou, Stefanos Zafeiriou, Irene Kotsia, </font> </span>
 <span lang="EN-US" style="line-height: 115%; color: windowtext; font-weight: 700">
 <font size="4">Guoying Zhao</font></span><span lang="EN-US" style="line-height: 115%; color: windowtext; font-weight: normal"><font size="4">, 
-Jeffrey Cohn (eds). Editorial of Special Issue on Human Behaviour Analysis 
-"In-the-Wild"</font></span><font size="4">.
+Jeffrey Cohn (eds). Editorial of Special Issue on Human Behaviour Analysis 'In-the-Wild'</font></span><font size="4">.
 <a style="color: blue; text-decoration: underline; text-underline: single" href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5165369">
 <span style="color: windowtext; text-decoration: none">IEEE Transactions on 
 Affective Computing</span></a>, 10 (1), 2019. </font> </p>
