--- a/main_experience.htm
+++ b/main_experience.htm
@@ -44,7 +44,7 @@ Position:</font></b></p>
 	<span lang="zh-cn"><font size="4">Adjunct Professor 
 (Docent) </font> </span>
 	<font size="4">in 
-¡°Computer vision, especially dynamic texture and motion analysis¡± , University of Oulu.</font></p>
+	'<i>Computer vision, especially dynamic texture and motion analysis</i>' , University of Oulu.</font></p>
 	</li>
 </ul>
 <p style="text-align: left; margin-bottom:0.5cm"><b>
@@ -89,18 +89,18 @@ time): CAD Center, North China University of Technology.</font></span></p>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0.5cm">
 	<font size="4"><span style="color: black">2020.01.01-2022.12.31: <b>Academy 
-	ICT 2023 project</b> ¡°Context-aware autonomous neural network learning¡±: 571 
+	ICT 2023 project</b> ''Context-aware autonomous neural network learning'': 571 
 	311 &#8364;.</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0.5cm">
 	<font size="4"><span style="color: black">2018.09.01-2022.08.31: <b>Academy 
-	project</b> ¡°Micro-gesture analysis with machine learning for hidden emotion 
-	understanding (MiGA)¡±: 857 145 &#8364;. </span></font></li>
+	project</b> ''Micro-gesture analysis with machine learning for hidden emotion 
+	understanding (MiGA)'': 857 145 &#8364;. </span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 21.0pt; margin-bottom:0.5cm">
 	<span lang="EN-US" style="color: black">
-	<font size="4">2018.09.01-2022.08.31: <b>Spearhead projects</b> ¡°Towards Reading 
-	Micro-Expressions in the Real World¡±, University of Oulu: 440&nbsp;000 
+	<font size="4">2018.09.01-2022.08.31: <b>Spearhead projects</b> ''Towards Reading 
+	Micro-Expressions in the Real World'', University of Oulu: 440&nbsp;000 
 	</font> </span>
 	<span lang="EN-US">
 	<font size="4">&#8364;.</font></span></li>
@@ -126,14 +126,14 @@ time): CAD Center, North China University of Technology.</font></span></p>
 	<b><span lang="EN-US" style="color: black"><font size="4">Tekes Fidipro 
 	Fellow project </font></span></b><span lang="EN-US" style="color: black">
 	<font size="4">(2016.01.01-2019.12.31): </font></span><span lang="EN-US">
-	<font size="4">Facial Behaviour Analysis &quot;in-the-wild&quot;. (<b>PI: Guoying Zhao</b>, 
+	<font size="4">Facial Behaviour Analysis ''in-the-wild''. (<b>PI: Guoying Zhao</b>, 
 	Fidipro Fellow: Prof. Stefanos Zafeiriou)</font></span></li>
 	<li>
 	<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 20.9pt; margin-bottom:0.5cm">
 	<span lang="EN-US" style="color: black"><font size="4">Four-year<b> Academy 
 	project funding</b> (2014.09.01-2018.08.31) from Academy of Finland for 
-	researching ¡°</font></span><span lang="EN-US"><font size="4">Computer Vision 
-	for Continuous Emotional State Analysis (CV4Emo)</font></span><span lang="EN-US" style="color: black"><font size="4">¡±.
+	researching ''</font></span><span lang="EN-US"><font size="4">Computer Vision 
+	for Continuous Emotional State Analysis (CV4Emo)</font></span><span lang="EN-US" style="color: black"><font size="4">''.
 	</font></span><span lang="EN-US"><font size="4">Overall success rate: 16%.</font></span></li>
 	<li>
 	<p class="MsoListParagraphCxSpMiddle" style="text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 21.0pt; margin-bottom:0.5cm">
@@ -150,8 +150,8 @@ time): CAD Center, North China University of Technology.</font></span></p>
 	<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; line-height: 150%; margin-left: 20.9pt; margin-bottom:0.5cm">
 	<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 	<font size="4">&nbsp;</font></span><span lang="EN-US"><font size="4"><b>Infrastructure 
-	funding</b> ¡°Test databases and computing devices for machine vision 
-	research¡±.&nbsp; 2014.01-2015.06.</font></span></li>
+	funding</b> ''Test databases and computing devices for machine vision 
+	research''.&nbsp; 2014.01-2015.06.</font></span></li>
 	<li>
 	<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; line-height: 150%; margin-left: 20.9pt; margin-bottom:0.5cm">
 	<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
@@ -292,7 +292,6 @@ High-Tech Research and Development Plan (grant No: 863-306-ZT03-08-1)</font></sp
 Dynamic Images: Chinese National ministry of education Plan</font></span></p>
 	</li>
 </ul>
-<p class="MsoListParagraphCxSpLast" style="text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 21.0pt">¡¡</p>
 
 </body>
 
