--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -155,7 +155,7 @@ ul
 
 <body>
 
-<p align="center"><b>
+<p align="center" style="margin-top: 24px; margin-bottom: 24px"><b>
 <span style="font-size: 14.0pt; font-family: Times New Roman">HONORS &amp; 
 AWARDS</span></b></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
@@ -175,7 +175,7 @@ in Europe.</span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span><span style="font-style: normal; font-variant: normal; font-weight: normal; font-size: 7.0pt; font-family: Times New Roman" lang="EN-US">
-</span><span lang="EN-US" style="font-family: 'Times New Roman',serif">Finland¡¯s 
+</span><span lang="EN-US" style="font-family: 'Times New Roman',serif">Finland's 
 most publishing researcher on AI in 2015-16 (Digibarometri 2017 report).</span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
@@ -209,8 +209,7 @@ Stereoscopic Dynamic Images¡± of North China University of Technology, 2002.</sp
 -- </span><span lang="EN-US" style="font-family: Times New Roman">Award of most 
 outstanding organizer of graduate union activity of North China University of 
 Technology, 2002.</span></p>
-<p align="center">¡¡</p>
-<p align="center"><b>
+<p align="center" style="margin-top: 24px; margin-bottom: 24px"><b>
 <span style="font-size: 14.0pt; font-family: Times New Roman">TEACHING</span></b></p>
 <p class="MsoNormal" style="margin-left: 0pt; line-height:200%">
 <font face="Times New Roman">
@@ -246,27 +245,25 @@ Finland), <b>
 <a style="color: blue; text-decoration: underline; text-underline: single" href="http://www.comp.hkbu.edu.hk/~icpr06/tutorials/Pietikainen.html">
 <span style="color: windowtext; text-decoration: none">Local Binary Pattern 
 Approach to Computer Vision</span></a></b>. Aug. 20-24, 2006, Hongkong</span></font></p>
-<p class="MsoNormal" style="margin-left: 0pt; line-height:200%">
-¡¡</p>
  <![if pub11]>
- <p class="MsoNormal" style="text-align: center; text-indent: 0pt; line-height: 200%">
+ <p class="MsoNormal" style="text-align: center; text-indent: 0pt; line-height: 200%; margin-top:24px; margin-bottom:24px">
 <span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold">
 Supervision/Co-Supervision</span></p>
 <p class="MsoNormal" style="line-height: 200%; ">
-<span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold">
+<span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold; text-decoration:underline">
 Postdoctoral researchers: </span></p>
 <p style="line-height: 200%" class="MsoNormal">
 <span style="font-family: Times New Roman">--&nbsp; Dr. <b>Xin Liu</b>: 
 2019-present</span></p>
 <p style="line-height: 200%" class="MsoNormal">
 <span style="font-family: Times New Roman">--&nbsp; Dr. <b>Nhat Vo</b>: 
-2018-present</span></p>
+2018-2020</span></p>
 <p style="line-height: 200%" class="MsoNormal">
 <span style="font-family: Times New Roman">--&nbsp; Dr. <b>Xiaobai Li</b>: 
-2017-present </span></p>
+2017-2020</span></p>
 <p style="line-height: 200%" class="MsoNormal">
 <span style="font-family: Times New Roman">--&nbsp; Dr. <b>Jingang Shi</b>: 
-2017-present </span></p>
+2017-2020</span></p>
 <p style="line-height: 200%" class="MsoNormal">
 <span style="font-family: Times New Roman">-- Dr. <b>Mohammad Sabokrou</b>: 2018</span></p>
 <p style="line-height: 200%" class="MsoNormal">
@@ -283,10 +280,15 @@ Kellokumpu</b>: 2013-2017 </span></p>
 <font face="Times New Roman">-- </font></span>
 <span lang="en-US" style="font-family: Times New Roman">Dr. <b>Mohammad 
 Ghahramani</b>: 2012-2013</span></p>
-<p class="MsoNormal" style="line-height: 200%">¡¡</p>
 <p class="MsoNormal" style="line-height: 200%">
-<span lang="en-US" style="font-family: Times New Roman">&nbsp;</span><span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold">Ph. 
+<span lang="en-US" style="font-family: Times New Roman">&nbsp;</span><span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold; text-decoration:underline">Ph. 
 D. dissertations:</span></p>
+<p style="line-height: 200%" class="MsoNormal"><font face="Times New Roman">--
+<b>Mr. Atif Shah</b>, Ph.D. student: 2020-present&nbsp; (Main Supervisor)</font></p>
+<p style="line-height: 200%" class="MsoNormal"><font face="Times New Roman">--
+<b>Mr. Tuomas Varanka</b>, Ph.D. student: 2020-present&nbsp; (Main Supervisor)</font></p>
+<p style="line-height: 200%" class="MsoNormal"><font face="Times New Roman">--
+<b>Mr. Abdelrahman Mostafa</b>, Ph.D. student: 2020-present (Main Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal"><font face="Times New Roman">--
 <b>Mr. Zitong Yu</b>, Ph.D. student: 2018-present: Physiological signal analysis 
 and applications (Main Supervisor)</font></p>
@@ -349,9 +351,7 @@ video analysis by local descriptors and deformable image registration, 2008-2013
 Kellokumpu</span><span lang="en-US" style="font-family: Times New Roman">: 
 Vision-based human motion description and recognition, 2006-2011 (Advisor)</span></p>
 <p class="MsoNormal" style="line-height: 200%; margin-right: -.7pt">
-¡¡</p>
-<p class="MsoNormal" style="line-height: 200%; margin-right: -.7pt">
-<span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold">
+<span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold; text-decoration:underline">
 Master theses:</span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <span style="font-family: 'Times New Roman',serif; font-size: 12.0pt">Ms. <b>Mei 
@@ -376,6 +376,12 @@ Kaikai Wang </b>(2018-);<b> </b></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <span style="font-family: 'Times New Roman',serif; font-size: 12.0pt">Mr. <b>
 Jianbo Li </b>(2018-); </span></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
+<span style="font-family: 'Times New Roman',serif">Mr. <b>Tuomas Varanka</b> 
+(2019-2020);</span></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
+<span style="font-family: 'Times New Roman',serif">Mr. <b>Hao Ban</b> 
+(2019-2020);</span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <span style="font-family: 'Times New Roman',serif; font-size: 12.0pt">Mr. <b>
 Guifeng Li </b>(2018-2019); </span></p>
@@ -413,7 +419,7 @@ Yingyue Xu </b>(<span style="font-family: 'Times New Roman',serif; font-size: 12
 Qiuhai He </b>(Visiting 2013. 09-2015.06);<b> </b></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <span style="font-family: 'Times New Roman',serif; font-size: 12.0pt">Mr. <b>Yan 
-Zhai </b>(Visitng 2012. 09-2013.08)</span><span style="font-size: 12.0pt">.</span><span lang="en-US">&nbsp;</span></p>
+Zhai </b>(Visitng 2012. 09-2013.08)</span><span style="font-size: 12.0pt">.</span></p>
 
 </body>
 
