--- a/education.htm
+++ b/education.htm
@@ -84,8 +84,8 @@ Institute, Hebei, China.</font></b></p>
 <ul>
 	<li>
 	<p class="MsoNormal" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
-	<span lang="EN-US"><font size="4">Vice-chair of student union of electronic 
-engineering department, 1997-1999</font></span></p></li>
+	<span lang="EN-US"><font size="4">Vice-chair of student union of Electronic 
+	Engineering Department, 1997-1999</font></span></p></li>
 	<li>
 	<p class="MsoNormal" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 	<span lang="EN-US"><font size="4">Bachelor in Computer Science and Technology.</font></span></p>
