--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -159,6 +159,15 @@ ul
 <span style="font-size: 14.0pt; font-family: Times New Roman">HONORS &amp; 
 AWARDS</span></b></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
+-- Award of Academy Professor from
+<span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">
+Academy of Finland, 2020</span></span></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
+-- IAPR Fellow, 2020 (For contributions to video analysis and affective 
+computing).</span></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">-- 
 First place on Chalearn multi-modal face anti-spoofing attack detection 
 challenge @ CVPR 2020.</span></p>
@@ -167,11 +176,18 @@ challenge @ CVPR 2020.</span></p>
 Second place on Chalearn single-modal face anti-spoofing attack detection 
 challenge @ CVPR 2020.</span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
+-- 2nd Place Scheme on Action Recognition Track of ECCV 2020 VIPriors Challenges 
+(88.31%).</span></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-family: Times New Roman">-- </span>
 <span lang="EN-US" style="font-family: 'Times New Roman',serif">The top 10 
 Chinese scientific and technological leaders in Europe (2018) by Federation of 
 Chinese Professional Associatio</span><span style="font-family: 'Times New Roman',serif">ns 
 in Europe.</span></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<span style="font-family: 'Times New Roman',serif">-- Selected to reserve list 
+in ERC 2014 starting grant and ERC 2016 consolidator grant.</span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span><span style="font-style: normal; font-variant: normal; font-weight: normal; font-size: 7.0pt; font-family: Times New Roman" lang="EN-US">
@@ -197,13 +213,13 @@ postdoc project from Academy of Finland, 2008</span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 -- </span><span lang="EN-US" style="font-family: Times New Roman">Honor of 
-outstanding doctoral dissertation &quot;Video-based Gait Recognition&quot; of Institute of 
+outstanding doctoral dissertation ''Video-based Gait Recognition'' of Institute of 
 Computing Technology, Chinese Academy of Sciences, 2005</span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 -- </span><span lang="EN-US" style="font-family: Times New Roman">Honor of 
-outstanding master thesis ¡°The Generation Technology and Application of 
-Stereoscopic Dynamic Images¡± of North China University of Technology, 2002.</span></p>
+outstanding master thesis ''The Generation Technology and Application of 
+Stereoscopic Dynamic Images'' of North China University of Technology, 2002.</span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 -- </span><span lang="EN-US" style="font-family: Times New Roman">Award of most 
@@ -245,6 +261,11 @@ Finland), <b>
 <a style="color: blue; text-decoration: underline; text-underline: single" href="http://www.comp.hkbu.edu.hk/~icpr06/tutorials/Pietikainen.html">
 <span style="color: windowtext; text-decoration: none">Local Binary Pattern 
 Approach to Computer Vision</span></a></b>. Aug. 20-24, 2006, Hongkong</span></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt; margin-right: 0in; margin-top: 0in; margin-bottom: 5.0pt">
+<font face="Times New Roman">-- Completed 15-credit University Pedagogy studies 
+in 2019.</font></p>
+<p class="MsoNormal" style="margin-left: 0pt; line-height:200%">
+¡¡</p>
  <![if pub11]>
  <p class="MsoNormal" style="text-align: center; text-indent: 0pt; line-height: 200%; margin-top:24px; margin-bottom:24px">
 <span lang="en-US" style="font-size: 14.0pt; line-height: 200%; font-family: Times New Roman; font-weight: bold">
