--- a/main_experience.htm
+++ b/main_experience.htm
@@ -36,7 +36,7 @@ Position:</font></b></p>
 <ul>
 	<li>
 	<p style="text-align: left; margin-bottom:0.5cm"><font size="4">2017.12 - , Full 
-	Professor in Computer Science and Engineering, University of Oulu.</font></p>
+	Professor (Tenured) in Computer Science and Engineering, University of Oulu.</font></p>
 	</li>
 	<li>
 	<p style="text-align: left; margin-bottom:0.5cm"><font size="4">2010.9 -,
@@ -44,7 +44,7 @@ Position:</font></b></p>
 	<span lang="zh-cn"><font size="4">Adjunct Professor 
 (Docent) </font> </span>
 	<font size="4">in 
-	'<i>Computer vision, especially dynamic texture and motion analysis</i>' , University of Oulu.</font></p>
+	''<i>Computer vision, especially dynamic texture and motion analysis</i>'', University of Oulu.</font></p>
 	</li>
 </ul>
 <p style="text-align: left; margin-bottom:0.5cm"><b>
@@ -86,6 +86,11 @@ time): CAD Center, North China University of Technology.</font></span></p>
 <p style="text-align: left; margin-bottom:0.5cm"><span style="font-size: 14pt">
 <b>Projects as PI or Co-PI:</b></span></p>
 <ul>
+	<li>
+	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0.5cm">
+	<font size="4"><span style="color: black">2021.09.01-2026.08.31: <b>Academy 
+	Professor</b> Grant (highest academic position of Academy of Finland): <b>
+	Towards vision-based emotion AI (EmotionAI)</b>.&nbsp; 798 750 &#8364;.</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0.5cm">
 	<font size="4"><span style="color: black">2020.01.01-2022.12.31: <b>Academy 
@@ -199,7 +204,7 @@ time): CAD Center, North China University of Technology.</font></span></p>
 	<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; line-height: 150%; margin-left: 20.9pt; margin-bottom:0.5cm">
 	<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 	<font size="4">&nbsp;</font></span><span lang="EN-US"><font size="4">Machine 
-	Learning Proof of Concept (MLPOC) (2015.12 ¨C 2016.04) from European Regional 
+	Learning Proof of Concept (MLPOC) (2015.12-2016.04) from European Regional 
 	Development Fund (Co-PI. PI: Prof. Olli Silven)</font></span></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 21.0pt; margin-bottom:0.5cm">
