--- a/teammembers.htm
+++ b/teammembers.htm
@@ -41,8 +41,10 @@ p
 			<li>
 			<p class="title" style="line-height: 200%"><span lang="en-us">Dr. 
 			Xin LIU (Academy Postdoctoral Researcher)</span></p></li>
+			<li>
+			<p class="title" style="line-height: 200%"><span lang="en-us">Dr. 
+			Kevin CHENG</span></p></li>
 		</ul>
-		<p class="title" style="line-height: 200%">﹛</p>
 		</td>
 		<td width="288" height="0" align="left" valign="top">
 		<ul>
@@ -94,8 +96,10 @@ p
 			<li>
 			<p class="title" style="line-height: 200%">Mr. Yar Zoe MYINT</p>
 			</li>
+			<li>
+			<p class="title" style="line-height: 200%">Ms. Wenting TAO</p>
+			</li>
 		</ul>
-		<p class="title" style="line-height: 200%">﹛</p>
 		</td>
 		<td height="0" align="left" valign="top" width="453">
 		<ul>
@@ -104,11 +108,11 @@ p
 			Yuhua FAN (Liaocheng University): Oct. 2019 - Oct. 2021</li>
 			<li>
 			<p class="title" style="line-height: 200%">Ms. Yanying LIANG (South 
-			China University of Technology): Oct. 2019 每 Oct. 2021</li>
+			China University of Technology): Oct. 2019 - Oct. 2021</li>
 			<li>
 			<p class="title" style="line-height: 200%"><span lang="en-us">Mr. 
 			Yang LIU </span>(South China University of Technology): Oct. 20<span lang="en-us">20</span> 
-			每 Oct. 2021</li>
+			- Oct. 2021</li>
 			<li>
 			<p class="title" style="line-height: 200%">Mr. Jinsheng WEI <span lang="en-us">
 			(Southeast University, Nanjing, China): Nov. 2020 - Nov. 2021</span></li>
@@ -196,13 +200,13 @@ p
 			</span>Chinese Academy of Sciences): Oct. 2018 - Jun. 20<span lang="en-us">20</span></li>
 			<li>
 			<p class="title" style="line-height: 150%">Mr. Berkay Elag<span lang="fi">&ouml;z</span> (Izmir 
-			Katip Celebi University, Turkey): Jan. 2020 每 Jun. 2020</li>
+			Katip Celebi University, Turkey): Jan. 2020 - Jun. 2020</li>
 			<li>
 			<p class="title" style="line-height: 150%">Mr. Yunrui Zhao (Beihang 
-			University): Jan. 2020 每 Mar. 2020</li>
+			University): Jan. 2020 - Mar. 2020</li>
 			<li>
 			<p class="title" style="line-height: 150%">Mr. Gun Ahn (Seoul 
-			National university, Seoul): Sep. 2019 每 Feb. 2020</li>
+			National university, Seoul): Sep. 2019 - Feb. 2020</li>
 			<li>
 			<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
 			Prof. </span>Zhaoqiang Xia <span lang="en-us">(Northwestern 
@@ -230,11 +234,11 @@ p
 			(Northwest University): Mar. - Nov. 2018</li>
 			<li>
 			<p class="title" style="line-height: 150%">Mr. Ngoc-Huynh Ho (Chonnam 
-			National University, South Korea; PhD candidate): Jan. 6 每 Jan. 20, 
+			National University, South Korea; PhD candidate): Jan. 6 - Jan. 20, 
 			2019</li>
 			<li>
 			<p class="title" style="line-height: 150%">Mr. Nhu-Tai Do (Chonnam 
-			National University, South Korea; PhD candidate): Jan. 6 每 Jan. 20, 
+			National University, South Korea; PhD candidate): Jan. 6 - Jan. 20, 
 			2019</li>
 			<li>
 			<p class="title" style="line-height: 150%">Mr. Yundi Guo (Central 
