--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -289,7 +289,7 @@ Special issue on Recognizing Microexpression: An Interdisciplinary Perspective,
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <font size="4">(with S. Zafeiriou, I. Kotsia, M. Nicolaou, J. 
 Cohn) IEEE Transactions on Affective Computing: Special Issue on Human Behavior 
-Analysis ¡°in-the-wild¡±, 2016-2017</font></p>
+Analysis ''in-the-wild'', 2016-2017</font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <font size="4">(with S. Zafeiriou, I. Kotsia, M. Pietik&auml;inen, 
 J. Cohn and R. Chellappa) Special issue on </font>
@@ -310,29 +310,28 @@ Issue on Machine Learning in Motion Analysis, Image and Vision Computing,
 <span lang="EN-US"><font size="4">(with L. Wang, N. Rajpoot, M. 
 Nixon) Special issue on New Advances in Video-based Gait Analysis and 
 Applications: Challenges and Solutions,<b> </b>IEEE Transactions on Systems, 
-Man, and Cybernetics¡ªPart B: Cybernetics, 2009-2010. </font> </span></p>
+Man, and Cybernetics - Part B: Cybernetics, 2009-2010. </font> </span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; text-indent:-21.0pt">
 <font size="4">--&nbsp;
 <span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:700; text-decoration:underline">
 Co-chair of 15 international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: </span>
 <span style="line-height: 125%">IEEE BigMM Grand Challenge 2020 on Touchless 
-Technologies; ¡°C</span></font><font size="4" face="Times New Roman">VPM 2020: 
+Technologies; ''C</span></font><font size="4" face="Times New Roman">VPM 2020: 
 International Workshop and Challenge on Computer Vision for Physiological 
-Measurement¡± with CVPR 2020; W</font><font size="4"><span lang="EN-US" style="line-height: 125%; ">orkshop on &quot;Automatic Face Analytics for Human Behavior Understanding (FaceHUB 
+Measurement'' with CVPR 2020; W</font><font size="4"><span lang="EN-US" style="line-height: 125%; ">orkshop on &quot;Automatic Face Analytics for Human Behavior Understanding (FaceHUB 
 2018)&quot; with FG 2018; </span> </font> <font face="Times New Roman">
 <font size="4">W</font><span lang="en-us"><font size="4">orkshop 
 on &quot;</font></span><font size="4">CEFRL: Compact and Efficient Feature Representation and 
 Learning<span lang="en-us"> </span>in Computer Vision</font><span lang="en-us"><font size="4">&quot; 
 with ICCV 2017; </font> </span><font size="4">Workshop on<span lang="en-us"> &quot;Automatic Face Analytics 
-for Human Behavior Understanding (FaceHUB)&quot;</span> with BMVC 2017; ¡°Face</font></font><span lang="EN-US"><font size="4">s 
-¡°in-the-wild¡± Workshop-Challenge (Wild-Face)¡± with CVPR 2017; </font> </span>
-<font face="Times New Roman" size="4">¡°Multi-view 
-lipreading challenge¡± with ACCV 2016; Workshop on ¡°Spontaneous Facial Behavior 
-Analysis¡± with ACCV 2016; Workshop on ¡°Robust Features for Computer Vision¡± with 
-CVPR 2016; Workshop on ¡°Context-Based Affect Recognition and Affective Face 
-¡°in-the-wild¡± with CVPR 2016; Workshop on ¡°Spontaneous Facial Behavior 
-Analysis¡±, in connection with top tier conference ECCV 2014; Workshop on ¡°RoLoD: 
-Robust local descriptors for computer vision¡± with ACCV 2014; Workshops on 
+for Human Behavior Understanding (FaceHUB)&quot;</span> with BMVC 2017; ''Face</font></font><span lang="EN-US"><font size="4">s 
+'in-the-wild' Workshop-Challenge (Wild-Face)'' with CVPR 2017; </font> </span>
+<font size="4">''</font><font face="Times New Roman" size="4">Multi-view 
+lipreading challenge'' with ACCV 2016; Workshop on ''Spontaneous Facial Behavior 
+Analysis'' with ACCV 2016; Workshop on ''Robust Features for Computer Vision'' with CVPR 2016; Workshop on ¡°Context-Based Affect Recognition and Affective Face 
+¡°in-the-wild¡± with CVPR 2016; Workshop on ''Spontaneous Facial Behavior 
+Analysis'', in connection with top tier conference ECCV 2014; Workshop on ''RoLoD: 
+Robust local descriptors for computer vision'' with ACCV 2014; Workshops on 
 Machine Learning for Vision-based Motion Analysis, in connection with top tier 
 conferences ECCV 2008, ICCV 2009, CVPR 2011.</font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
@@ -345,13 +344,13 @@ sessions: </font> </span></u></b></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <span lang="EN-US"><font size="4">&nbsp;(with X. Fu and M. </font> </span>
 <span lang="EN-GB"><font size="4">Pietik&auml;inen</font></span><span lang="EN-US"><font size="4">) 
-Organization chair of special session ¡°Expression and Micro-Expression Analysis: 
-From Psychology to Computer Vision¡± for IEEE International Conference on 
+Organization chair of special session ''Expression and Micro-Expression Analysis: 
+From Psychology to Computer Vision'' for IEEE International Conference on 
 Automatic Face and Gesture Recognition 2013 (FG¡¯13)</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <span lang="EN-US"><font size="4">(with Z. Zhou and S. Zafeiriou) 
-Organization chair of special session ¡°Analysis of mouth motion for speech 
-recognition and speaker verification¡± for IEEE International Conference on 
+Organization chair of special session ''Analysis of mouth motion for speech 
+recognition and speaker verification'' for IEEE International Conference on 
 Automatic Face and Gesture Recognition 2015 (FG¡¯15)</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; text-indent:-21.0pt">
 <font size="4">
@@ -364,7 +363,7 @@ Tutorials:</span><span style="font-style: normal; font-variant: normal; font-wei
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; text-autospace:ideograph-numeric ideograph-other; line-height:200%">
 <font size="4">&nbsp; 
 FG 2018 tutorial: Guoying Zhao and Matti Pietik&auml;inen: Reading hidden 
-emotions from micro-expression analysis. Xi¡¯an, China.</font></p>
+emotions from micro-expression analysis. Xi'an, China.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; text-autospace:ideograph-numeric ideograph-other; line-height:200%" class="MsoNormal">
 <font size="4">&nbsp; SCIA 
 2013 tutorial: Matti Pietik&auml;inen and Guoying Zhao: Image and video analysis with 
@@ -389,20 +388,29 @@ Aug. 20-24, 2006, Hongkong.</font></span></p>
 <span style="font-family: 'Times New Roman'; font-weight: 700" lang="en-us">
 <u><font size="4">Invited talks:</font></u></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
-<font size="4">Keynote talk ¡°Remote Heart Rate Measure from Videos: Methods and 
-Application in Atrial Fibrillation Detection&quot; in 12th International Conference 
+<font size="4">&nbsp;ICPR Workshop on ''facial and body expressions, 
+micro-expressions and behavior recognition'', Jan. 10, 2021.</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
+<font size="4">9th International Conference on Computing and Pattern Recognition 
+(ICCPR 2020), Oct. 31, 2020</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
+<font size="4">IPM-AI Summer School 2020 (Aug. 22-26, 2020,
+<a href="http://cs.ipm.ac.ir/asoc2020/">http://cs.ipm.ac.ir/asoc2020/</a>).</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
+<font size="4">Keynote talk ''Remote Heart Rate Measure from Videos: Methods and 
+Application in Atrial Fibrillation Detection'' in 12th International Conference 
 on Bioinformatics and Biomedical Technology (ICBBT 2020), May 17, 2020.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt" class="MsoNormal">
-<font size="4">&nbsp; Keynote talk ¡°Face anti-spoofing with remote 
-heart rate estimation from videos¡± in 3rd International Conference on Biometric 
+<font size="4">&nbsp; Keynote talk ''Face anti-spoofing with remote 
+heart rate estimation from videos'' in 3rd International Conference on Biometric 
 Engineering and Applications (ICBEA 2019), May 30, 2019.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt" class="MsoNormal">
-<font size="4">&nbsp; Keynote talk ¡°Facial expression analysis: From 
-macro to micro¡± in the 6th International Workshop on Context Based Affect 
+<font size="4">&nbsp; Keynote talk ''Facial expression analysis: From 
+macro to micro'' in the 6th International Workshop on Context Based Affect 
 Recognition (CBAR 2019) in conjunction with FG2019, May 14, 2019.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt" class="MsoNormal">
-<font size="4">&nbsp; Keynote talk ¡°Measuring Heart Rate from Videos 
-and Its application in Atrial Fibrillation Detection¡± in international symposium 
+<font size="4">&nbsp; Keynote talk ''Measuring Heart Rate from Videos 
+and Its application in Atrial Fibrillation Detection'' in international symposium 
 on frontier technologies and medical imaging analysis, June 28, 2018, Central 
 South University.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; text-autospace:ideograph-numeric ideograph-other; line-height:200%" class="MsoNormal">
@@ -423,12 +431,12 @@ Micro-Expression Grand Challenge (MEGC): Methods and Datasets</font></a><span st
 in conjunction with FG2018.</font></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; text-autospace:ideograph-numeric ideograph-other; line-height:200%" class="MsoNormal">
 <font size="4">&nbsp;
-Keynote talk ¡°Towards reading hidden emotions: micro-expression analysis and 
-heart rate estimation¡± in SIG 27 Conference, Nov. 29, 2016</font></p>
+Keynote talk ''Towards reading hidden emotions: micro-expression analysis and 
+heart rate estimation'' in SIG 27 Conference, Nov. 29, 2016</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; text-autospace:ideograph-numeric ideograph-other; line-height:200%" class="MsoNormal">
 <font size="4">&nbsp;
-<span lang="en-us">Keynote</span> talk ¡°Facial Expression and Micro-Expression Analysis: Progress and 
-Challenges¡± in ACCV workshop on Computer Vision for Affective Computing (CV4AC), 
+<span lang="en-us">Keynote</span> talk ''Facial Expression and Micro-Expression Analysis: Progress and 
+Challenges'' in ACCV workshop on Computer Vision for Affective Computing (CV4AC), 
 Nov. 1, 2014</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; text-autospace:ideograph-numeric ideograph-other; line-height:200%; text-indent:-21.0pt" class="MsoNormal">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
@@ -505,31 +513,31 @@ ICB, CAIP, CISP, &nbsp;etc.</font></p>
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">--&nbsp; </font> </span>
 <span lang="EN-US">
-<font size="4">Prof. Jeffrey Cohn¡¯s group in University of Pittsburgh and Carnegie Mellon 
+<font size="4">Prof. Jeffrey Cohn's group in University of Pittsburgh and Carnegie Mellon 
 University (CMU), USA, from Mid. June for two weeks</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; margin-right: -6.8pt; margin-top: 0in; margin-bottom: 6.0pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">--&nbsp; </font> </span>
 <span lang="EN-US">
-<font size="4">Prof. DIMITRIS N. METAXAS¡¯ group in Rutgers, The State University of New Jersey, 
+<font size="4">Prof. DIMITRIS N. METAXAS' group in Rutgers, The State University of New Jersey, 
 USA, from June to Aug., 2016</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; margin-right: -6.8pt; margin-top: 0in; margin-bottom: 6.0pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">--&nbsp; </font> </span>
 <span lang="EN-US">
-<font size="4">Prof. Maja Pantic¡¯s IBUG group in Imperial College of London, UK, from July 12 
+<font size="4">Prof. Maja Pantic's IBUG group in Imperial College of London, UK, from July 12 
 to Sep. 28, 2013</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">--&nbsp; </font> </span>
 <span lang="EN-US">
-<font size="4">Prof. Mark Nixon¡¯s ISIS group in Southampton University, UK, from July 11 to 22, 
+<font size="4">Prof. Mark Nixon's ISIS group in Southampton University, UK, from July 11 to 22, 
 2011.</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">--&nbsp; </font> </span>
 <span lang="EN-US">
-<font size="4">Prof. Stan Z. Li¡¯s group in Institute of Automation, Chinese Academy of Sciences 
+<font size="4">Prof. Stan Z. Li's group in Institute of Automation, Chinese Academy of Sciences 
 from April 6th to 19<sup>th</sup>, 2009</font></span></p>
 
 </body>
